relazione: che sia la fine?

--- a/relazione/section/esempio-lavorazione.tex
+++ b/relazione/section/esempio-lavorazione.tex
@@ -85,7 +85,9 @@ In \ref{tab:confrontobm2} e \ref{tab:confrontobm3} invece si vede la stessa lavo
 
 Si vede invece dalla tabella \ref{tab:confrontoBoxMesh} come l'implementazione con Marching Cubes possa risultare competitiva rispetto alla mera visualizzazione di cubi in lavorazioni brevi e che comportino la generazione di un octree poco bilanciato e poco profondo. All'aumentare della profondità dell'albero, invece, la semplicità della generazione dei \texttt{Box} di OSG risulta più veloce. Per lavorazioni più complesse, che richiedono un octree più completo, l'approccio \texttt{box} è più veloce rispetto alla generazione della \texttt{mesh} in tutti i test effettuati.
 
-Si segnala che, per dimensioni minime dei voxel sufficientemente grandi, la lavorazione termina in tempi talmente brevi che risulta impossibile misurare un tempo attendibile. Inoltre, i tempi per le lavorazioni con octree più profondo sono da considerarsi al netto del tempo di swap, che può essere più o meno consistente a seconda della quantità di memoria RAM a disposizione.
+La tabella \ref{tab:confrontoBoxMesh} permette anche di constatare un'altra proprietà del processo di simulazione, legata alla ``località'' della simulazione: il file \texttt{positions.txt} contiene poco più di un terzo delle posizioni di \texttt{positions2.txt} ma i tempi di esecuzione non differiscono dello stesso ordine di grandezza, anzi, diminuendo la dimensione dei voxel sembra che queste quantità tendano a divergere\footnote{Con un piccolo abuso di notazione è possibile scrivere $\frac{\text{tempi \texttt{positions.txt}}}{\text{tempi \texttt{positions2.txt}}} \xrightarrow{\text{voxel size} \rightarrow 0} 0$}. Questo comportamento è dovuto al fatto che la prima simulazione interessa una porzione piuttosto ristretta dell'intero prodotto e attraversa ripetutamente zone in cui la maggior parte del volume è già stato rimosso, analizzando di conseguenza molti meno nodi dell'albero; nel secondo caso, invece, la fresa si sposta su porzioni sempre nuove del blocco, creando un octree più bilanciato e quindi con un numero maggiore di nodi da verificare ---e visualizzare---.
+
+Si segnala che, per dimensioni dei voxel sufficientemente grandi, la lavorazione termina in tempi talmente brevi che risulta impossibile misurare un tempo attendibile. Inoltre, i tempi per le lavorazioni con octree più profondo sono da considerarsi al netto del tempo di swap, che può essere più o meno consistente a seconda della quantità di memoria RAM a disposizione.
 
 \begin{center}
   \begin{table}[hb]
@@ -144,11 +146,11 @@ Vengono riportate ora (tabella \ref{tab:fps}) le prestazioni grafiche per le due
   \end{table}
 \end{center}
 
-Analizzando i risultati ottenuti, si può notare come per profondità dell'octree non troppo elevate, la lavorazione al massimo della velocità possibile penalizzi le prestazioni del visualizzatore, pur mantenendole più che buone. I FPS sono costantemente sopra i $25$, ad eccezione della lavorazione alla velocità massima con octree poco profondo: tuttavia, come si è già avuto modo di notare analizzando i tempi di esecuzione, i test effettuati in queste condizioni sono poco significativi, in quanto la lavorazione termina troppo presto per avere valori realistici. Basti vedere infatti come il numero di movimenti al secondo sia circa il doppio delle mosse realmente eseguite, e il visualizzatore, sostanzialmente, si apra a lavorazione già conclusa.
+Analizzando i risultati ottenuti, si può notare come per profondità dell'octree non troppo elevate, la lavorazione al massimo della velocità possibile penalizzi le prestazioni del visualizzatore, pur mantenendole più che buone. I FPS sono costantemente sopra i $25$, ad eccezione della lavorazione alla velocità massima con octree poco profondo: tuttavia, come si è già avuto modo di notare analizzando i tempi di esecuzione, i test effettuati in queste condizioni sono poco significativi, in quanto la lavorazione termina troppo presto per avere valori realistici. A dimostrazione di quanto detto è sufficiente considerare che il numero di movimenti al secondo risulta essere circa il doppio delle mosse realmente eseguite, con il visualizzatore che si apre a lavorazione già conclusa.
 
-Si vede inoltre come l'aggiornamento ogni $10$ posizioni dia risultati migliori, in termini di FPS, rispetto agli altri (quando disponibile, ogni $50$, ogni aggiornamento). Infine, è interessante notare come la visualizzazione in modalità \texttt{mesh} comporti una visualizzazione più rapida rispetto alla modalità \texttt{box}, a parità di parametri. Questo è probabilmente indice di una migliore gestione da parte di OpenSceneGraph delle figure costituite da semplici poligoni rispetto ai \texttt{Box}, che sono oggetti più pesanti, tale da compensare anche l'overhead dovuto a Marching Cubes.
+Si vede inoltre come l'aggiornamento ogni $10$ posizioni dia risultati migliori ---in termini di FPS--- rispetto agli altri (quando disponibile, ogni $50$, ogni aggiornamento). Infine, è interessante notare come la visualizzazione in modalità \texttt{mesh} comporti una visualizzazione più rapida rispetto alla modalità \texttt{box}, a parità di parametri: questo è probabilmente indice di un minor numero di poligoni da rappresentare nella modalità \emph{mesh}, tale da compensare l'overhead dovuto a Marching Cubes.
 
-Per dimensione dei voxel pari a $0.5$ invece si osserva come la lavorazione diventi talmente onerosa da penalizzare in maniera consistente anche l'aggiornamento della scena video: le prestazioni del rendering quando l'octree è molto profondo sono infatti le peggiori. Probabilmente potrebbero essere migliorate sfruttando le librerie CUDA, che noi non abbiamo usato non avendo a disposizione una scheda grafica nVidia.
+Per dimensione dei voxel pari a $0.5$ invece si osserva come la lavorazione diventi talmente onerosa da penalizzare in maniera consistente anche l'aggiornamento della scena video: le prestazioni del rendering quando l'octree è molto profondo sono infatti le peggiori.
 
 \subsection{Carico relativo dei moduli}
 È interessante infine analizzare cosa succede \textit{all'interno} di un'esecuzione del simulatore. Per farlo, osserviamo il grafico delle chiamate in figura \ref{fig:callgraph}. Questo grafico è stato ottenuto a partire dal una lavorazione in modalità \texttt{mesh} con dimensione dei voxel pari a $2$, con gli strumenti di debug e profiling \texttt{valgrind}, \texttt{callgrind} e \texttt{kcachegrind}.
@@ -166,4 +168,4 @@ La visualizzazione grafica, che inizia con l'invocazione del metodo \texttt{Disp
 
 Per quanto riguarda i rimanenti moduli, se il configuratore viene eseguito solo preliminarmente alla lavorazione e con compiti di setup, e ci si aspetta quindi un impatto limitato sul tempo totale, si può rilevare invece come in questa prova il Meshing sia assente dal grafo, segno di come anche il suo impatto sia limitato rispetto al Milling, conseguenza dell'efficienza dell'algoritmo Marching Cubes e della bontà della sua implementazione. Si segnala tuttavia come questo accada con dimensione minima dei voxel pari a 2: diminuendo la dimensione dei voxel l'impatto dovuto a Marching Cubes aumenta notevolmente, quindi ci si attende di veder comparire anche i metodi del Mesher tra quelli più impattanti sul tempo. Tuttavia, questi test non sono stati effettuati, in quanto l'esecuzione di \texttt{callgrind} rallenta di molto il tempo di esecuzione della simulazione, e una run con voxel più piccoli avrebbe richiesto con ogni probabilità diverse ore prima di giungere al termine.
 
-Come si può facilmente evincere dai risultati appena presentati, i metodi che vengono maggiormente invocati sono quelli che permettono l'interazione tra cutter e octree. Il metodo in assouto più chiamato è infatti \texttt{CylinderCutter::getDistance()} che misura la distanza tra il cutter (che in tutti i test effettuati era appunto di forma cilindrica) e il voxel più vicino, per determinare se c'è intersezione e quindi rimozione di materiale. Segue, con circa metà invocazioni, la gestione degli smart pointers di Boost e, con poco più di un terzo di chiamate, il metodo \texttt{Stock::IntersectionTester::fastInt()} che esegue i calcoli per determinare se c'è intersezione tra cutter e voxel.
+Come si può facilmente evincere dai risultati appena presentati, i metodi che vengono maggiormente invocati sono quelli che permettono l'interazione tra cutter e octree. Il metodo in assoluto più invocato è infatti \texttt{CylinderCutter::getDistance()} che misura la distanza tra il cutter (che in tutti i test effettuati era appunto di forma cilindrica) e il voxel più vicino, per determinare se c'è intersezione e quindi rimozione di materiale. Segue, con circa metà invocazioni, la gestione degli smart pointers di Boost e, con poco più di un terzo di chiamate, il metodo \texttt{Stock::IntersectionTester::fastInt()} che esegue i calcoli per determinare se c'è intersezione tra cutter e voxel.
