--- a/relazione/biblio.bib
+++ b/relazione/biblio.bib
@@ -14,7 +14,21 @@
  doi = {10.1145/37402.37422},
  acmid = {37422},
  publisher = {ACM},
- address = {New York, NY, USA},
+ address = {New York, NY, USA}
+}
+
+@article{yau_CNCSimulation,
+	author = {Yau, Hong T. and Tsou, Lee S. and Tong, Yu C.},
+	title = {Adaptive NC Simulation for Multi-axis Solid Machining},
+	journal = {Computer-Aided Design \& Applications},
+	year = {2005}
+}
+
+
+@Misc{eberly_OBBCollision,
+	author = {David Eberly},
+	title = {Dynamic Collision Detection using Oriented Bounding Boxes},
+	note = {\url{http://www.geometrictools.com/}}
 }
 
 @book{osgbeginner,
@@ -25,7 +39,7 @@
     month = dec,
     publisher = {Packt Publishing},
     title = {{OpenSceneGraph} 3.0: Beginner's Guide},
-    url = {http://www.worldcat.org/isbn/1849512825},
+    url = {\url{http://www.worldcat.org/isbn/1849512825}},
     year = {2010}
 }
 
