...come non detto: leggera modifica alla bibliografia!

--- a/relazione/biblio.bib
+++ b/relazione/biblio.bib
@@ -1,6 +1,6 @@
 @article{Lorensen:1987:MCH:37402.37422,
  author = {Lorensen, William E. and Cline, Harvey E.},
- title = {Marching cubes: A high resolution 3D surface construction algorithm},
+ title = "Marching cubes: A high resolution {3D} surface construction algorithm",
  journal = {SIGGRAPH Comput. Graph.},
  issue_date = {July 1987},
  volume = {21},
@@ -19,7 +19,7 @@
 
 @article{yau_CNCSimulation,
 	author = {Yau, Hong T. and Tsou, Lee S. and Tong, Yu C.},
-	title = {Adaptive NC Simulation for Multi-axis Solid Machining},
+	title = "Adaptive {NC} Simulation for Multi-axis Solid Machining",
 	journal = {Computer-Aided Design \& Applications},
 	year = {2005}
 }
