typos - anche io la dò per finita

--- a/relazione/section/esempio-lavorazione.tex
+++ b/relazione/section/esempio-lavorazione.tex
@@ -85,7 +85,7 @@ In \ref{tab:confrontobm2} e \ref{tab:confrontobm3} invece si vede la stessa lavo
 
 Si vede invece dalla tabella \ref{tab:confrontoBoxMesh} come l'implementazione con Marching Cubes possa risultare competitiva rispetto alla mera visualizzazione di cubi in lavorazioni brevi e che comportino la generazione di un octree poco bilanciato e poco profondo. All'aumentare della profondità dell'albero, invece, la semplicità della generazione dei \texttt{Box} di OSG risulta più veloce. Per lavorazioni più complesse, che richiedono un octree più completo, l'approccio \texttt{box} è più veloce rispetto alla generazione della \texttt{mesh} in tutti i test effettuati.
 
-La tabella \ref{tab:confrontoBoxMesh} permette anche di constatare un'altra proprietà del processo di simulazione, legata alla ``località'' della simulazione: il file \texttt{positions.txt} contiene poco più di un terzo delle posizioni di \texttt{positions2.txt} ma i tempi di esecuzione non differiscono dello stesso ordine di grandezza, anzi, diminuendo la dimensione dei voxel sembra che queste quantità tendano a divergere\footnote{Con un piccolo abuso di notazione è possibile scrivere $\frac{\text{tempi \texttt{positions.txt}}}{\text{tempi \texttt{positions2.txt}}} \xrightarrow{\text{voxel size} \rightarrow 0} 0$}. Questo comportamento è dovuto al fatto che la prima simulazione interessa una porzione piuttosto ristretta dell'intero prodotto e attraversa ripetutamente zone in cui la maggior parte del volume è già stato rimosso, analizzando di conseguenza molti meno nodi dell'albero; nel secondo caso, invece, la fresa si sposta su porzioni sempre nuove del blocco, creando un octree più bilanciato e quindi con un numero maggiore di nodi da verificare ---e visualizzare---.
+La tabella \ref{tab:confrontoBoxMesh} permette anche di constatare un'altra proprietà del processo di simulazione, legata alla ``località'' della simulazione: il file \texttt{positions.txt} contiene poco più di un terzo delle posizioni di \texttt{positions2.txt} ma i tempi di esecuzione non differiscono dello stesso ordine di grandezza, anzi, diminuendo la dimensione dei voxel sembra che queste quantità tendano a divergere\footnote{Con un piccolo abuso di notazione è possibile scrivere $\frac{\text{tempi \texttt{positions.txt}}}{\text{tempi \texttt{positions2.txt}}} \xrightarrow{\text{voxel size} \rightarrow 0} 0$}. Questo comportamento è dovuto al fatto che la prima simulazione interessa una porzione piuttosto ristretta dell'intero prodotto e attraversa ripetutamente zone in cui la maggior parte del volume è già stato rimosso, analizzando di conseguenza molti meno nodi dell'albero; nel secondo caso, invece, la fresa si sposta su porzioni sempre nuove del blocco, creando un octree più bilanciato e quindi con un numero maggiore di nodi da verificare -- e visualizzare.
 
 Si segnala che, per dimensioni dei voxel sufficientemente grandi, la lavorazione termina in tempi talmente brevi che risulta impossibile misurare un tempo attendibile. Inoltre, i tempi per le lavorazioni con octree più profondo sono da considerarsi al netto del tempo di swap, che può essere più o meno consistente a seconda della quantità di memoria RAM a disposizione.
 
